--- a/sass/abstract/_mixins.scss
+++ b/sass/abstract/_mixins.scss
@@ -3,7 +3,7 @@
     &::after {
         content: "";
         display: table;
-        clear: both; // clears folat left and right
+        clear: both;
     }
 }
 
@@ -35,19 +35,18 @@ ORDER: Base + Typography > general layout + grid > page layout > components
 */
 @mixin respond($breakpoint) {
     @if $breakpoint == phone {
-        // this allow us to pass a block of code into a mixin
-        @media (max-width: 37.5em) { @content }; // 600px
+        @media (max-width: 37.5em) { @content };
     }
 
     @if $breakpoint == tab-port {
-        @media (max-width: 56.25em) { @content }; // 900px
+        @media (max-width: 56.25em) { @content };
     }
 
     @if $breakpoint == tab-land {
-        @media (max-width: 75em) { @content }; // 1200px
+        @media (max-width: 75em) { @content }; 
     }
 
     @if $breakpoint == big-desktop {
-        @media (min-width: 112.5em) { @content }; // 1800px
+        @media (min-width: 112.5em) { @content };
     }
 }
