--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -1,23 +1,22 @@
 // components/card
 .card {
     // FUNCTIONALITY
-    perspective: 150rem; // The lower the value, more dramatic the effect
-    -moz-perspective: 150rem; // To work in mozzila
+    perspective: 150rem;
+    -moz-perspective: 150rem;
     position: relative;
-    height: 52rem; // Because of positioining this height colapse and so we have to give one
+    height: 52rem;
 
 
     &__side {
         font-size: 2rem;
         height: 52rem;
-        transition: all .8s ease; // animates rotation over y axis
+        transition: all .8s ease;
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
-        backface-visibility: hidden; // hides the back of the element
+        backface-visibility: hidden;
         border-radius: 3px;
-        // To show the border radius that the image was overflowing
         overflow: hidden;
         box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
 
@@ -42,8 +41,6 @@
         }
     }
 
-    // Rotanting card 180º over y axis
-    // .card:hover .card__side
     &:hover &__side--front {
         transform: rotateY(180deg);
     }
@@ -58,10 +55,9 @@
         height: 23rem;
         background-blend-mode: screen;
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
-        clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%); // Cut the diagonalin the bottom of the image
+        clip-path: polygon(0 0, 100% 0, 100% 90%, 0 100%);
 
         &--1 {
-            // background linear gradient and background image to be blended
             background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url(../img/nat-5.jpg);
         }
 
@@ -89,7 +85,7 @@
     &__heading-span {
         padding: 1rem 1.5rem;
         -webkit-box-decoration-break: clone;
-        box-decoration-break: clone; // This property treats those two lines of text as if they where separated elements. In this case two elements with the same padding
+        box-decoration-break: clone;
 
         &--1 {
             background-image: linear-gradient(to right bottom, rgba($color-secondary-light, .85), rgba($color-secondary-dark, .85));
@@ -110,7 +106,7 @@
         ul {
             list-style: none;
             width: 80%;
-            margin: 0 auto; // center a block element inside a block element
+            margin: 0 auto;
 
             li {
                 text-align: center;
@@ -160,18 +156,18 @@
 
         &__side {
             height: auto;
-            transition: none; // Removes rotation over y axis
-            position: relative; // Because we haven't two sides anymore.
+            transition: none;
+            position: relative;
             box-shadow: none;
             
             &--back {
-                transform: rotateY(0); // Should not rotate anymore
+                transform: rotateY(0);
                 clip-path: polygon(0 10%, 100% 0, 100% 100%, 0 100%);
             }
         }
 
         &:hover &__side--front {
-            transform: rotateY(0); // Should not rotate anymore
+            transform: rotateY(0);
         }
 
         // FRONT SIDE STYLING
@@ -196,6 +192,5 @@
         &__price-value {
             font-size: 4rem;
         }
-
     }
 }
