--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,6 @@
 // layout/header
 .header {
-    height: 95vh; /* 95% of the height of the viewport*/
+    height: 95vh;
     background-image: linear-gradient(
         to right bottom,
         rgba($color-primary-light, 0.8),
@@ -14,7 +14,6 @@
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); 
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
-    // Change clip-path so it looks better.
     @include respond(phone) {
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); 
         clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
