--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -5,7 +5,6 @@
     }
     
     &__button {
-        // White circle for the menu
         background-color: $color-white;
         height: 7rem;
         width: 7rem;
@@ -16,11 +15,9 @@
         z-index: 600;
         box-shadow: 0 1rem 3rem rgba($color-black, .1);
 
-        // icon
         text-align: center;
         cursor: pointer;
 
-        // Decrease size
         @include respond(tab-port) {
             top: 4rem;
             right: 4rem;
@@ -33,7 +30,6 @@
     }
 
     &__background {
-        // Circle for the menu that expands is hidden behind the white one - green
         height: 6rem;
         width: 6rem;
         border-radius: 50%;
@@ -41,12 +37,10 @@
         top: 6.5rem;
         right: 6.5rem;
         background-image: radial-gradient($color-primary-light, $color-primary-dark);
-        z-index: 200; // only works in elements with position defined
+        z-index: 200; 
         transition: transform .8s cubic-bezier(0.86, 0, 0.07, 1);
 
-        // transform: scale(80); // this animation will create the effect of the growing circle (white to green)
 
-        // Decrease size
         @include respond(tab-port) {
             top: 4.5rem;
             right: 4.5rem;
@@ -59,15 +53,14 @@
     }
     
     &__nav {
-        // Ocupy's the entire viewport
         height: 100vh;
         position: fixed;
         top: 0;
         right: 0;
         z-index: 400;
         
-        width: 5%; // PRevent a right glitch
-        opacity: 0; // The navigation is no longer "clickable"
+        width: 5%; 
+        opacity: 0; 
         transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
     }
 
@@ -96,7 +89,7 @@
             text-decoration: none;
             text-transform: uppercase;
             background-image: linear-gradient(120deg, transparent 0%, transparent 50%, $color-white 50%);
-            background-size: 220%; // Starting condition of the hover effect
+            background-size: 220%; 
             transition: all .4s;
 
             span {
@@ -107,9 +100,9 @@
         
         &:hover,
         &:active {
-            background-position: 100%; // Final position of the hover effect
+            background-position: 100%; 
             color: $color-primary;
-            transform: translateX(1rem); // It needs the display propery set in the link
+            transform: translateX(1rem); 
         }
     }
 
@@ -120,7 +113,7 @@
     
     &__checkbox:checked ~ &__nav {
         opacity: 1;
-        width: 100%; // The navigation is shown
+        width: 100%; 
     }
 
     // ICON
@@ -162,9 +155,8 @@
         top: 1rem;
     }
 
-    // transform the icon
     &__checkbox:checked + &__button &__icon {
-        background-color: transparent; // the span element become transparent.
+        background-color: transparent; 
     }
     
     &__checkbox:checked + &__button &__icon::before {
