--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,27 +7,36 @@
     box-sizing: inherit;
 }
 
+/* the root font size is set in the html. This defines what 1rem is */
 html {
-    font-size: 62.5%;
+    /* font-size: 10px; 1 rem is the root font-size, so it's 10px */
+    font-size: 62.5%; // 1rem = 10px : 16px * 62.5% = 10px
     
-    @include respond(tab-land) {
-        font-size: 56.25%;
+    @include respond(tab-land) { // <1200px
+        // @content
+        font-size: 56.25%; // 1rem = 9px : 9/16=56.25%
     }
     
-    @include respond(tab-port) {
-        font-size: 50%;
+    @include respond(tab-port) { // <900px
+        font-size: 50%; // 1rem = 8px : 8/16=50%
     }
         
-    @include respond(big-desktop) {
-        font-size: 75%;
+    @include respond(big-desktop) { // >1800px
+        font-size: 75%; // 1rem = 12px : 12/16=75%
     }
 }
 
+/* Project font definitiions that will be inherit */
 body {
     box-sizing: border-box;
     padding: 3rem;
 
     @include respond(tab-port) {
-        padding: 0;
+        padding: 0; // lose padding at or below 900px
     }
+}
+
+::selection {
+    background-color: $color-primary;
+    color: $color-white;
 }
