--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,6 +1,6 @@
 // components/buttons
 .btn {
-    &,
+    &, // This will translate into btn
     &:link,
     &:visited {
         text-transform: uppercase;
@@ -12,6 +12,7 @@
         position: relative;
         font-size: $default-font-size;
 
+        // change for the <button> element
         border: none;
         cursor: pointer;
     }
