--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -4,15 +4,16 @@
         margin-bottom: 2rem;
     }
 
+    // input elements doesn't inherit font properties
     &__input {
         font-size: 1.5rem;
-        font-family: inherit;
-        color: inherit;
+        font-family: inherit; // by default browsers don't set the font-family to the one on our site, so we have to set it manually.
+        color: inherit; // Font color is also not inherited.
         padding: 1.5rem 2rem;
         border-radius: 2px;
         background-color: rgba($color-white, .5);
         border: none;
-        border-bottom: 3px solid transparent;
+        border-bottom: 3px solid transparent; // invisible
         width: 90%;
         display: block;
         transition: all .3s;
@@ -24,11 +25,12 @@
         &:focus {
             outline: none;
             box-shadow: 0 1rem 2rem rgba($color-white, .1);
-            border-bottom: 3px solid $color-primary;
+            border-bottom: 3px solid $color-primary; // green
         }
 
+        // input field validation
         &:focus:invalid {
-            border-bottom: 3px solid $color-secondary-dark;
+            border-bottom: 3px solid $color-secondary-dark; // orange
         }
     
         &::-webkit-input-placeholder {
@@ -45,9 +47,10 @@
         transition: all .3s;
     }
 
+    // plus is the adjacent sibling selector. the sibling element that we want top select, must be after the initial sibling element
     &__input:placeholder-shown + &__label {
-        opacity: 0;
-        visibility: hidden;
+        opacity: 0; // element still is in the page
+        visibility: hidden; // element is removed from the page
         transform: translateY(-4rem);
     }
 
@@ -61,6 +64,7 @@
         }
     }
 
+    // Hide the radio button
     &__radio-input {
         display: none;
     }
@@ -73,6 +77,7 @@
     }
 
     &__radio-button {
+        // The outside of the button
         height: 3rem;
         width: 3rem;
         border: 5px solid $color-primary;
@@ -82,6 +87,7 @@
         left: 0;
         top: -.4rem0;
 
+        // The dot inside the button
         &::after {
             content: "";
             height: 1.3rem;
@@ -97,6 +103,7 @@
         }
     }
 
+    // select the radio button that is checked
     &__radio-input:checked ~ &__radio-label &__radio-button::after  {
         opacity: 1;
     }
