--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,6 +5,7 @@
     font-size: 1.4rem;
     color: $color-grey-light-1;
 
+    // Decrease padding
     @include respond(tab-port) {
         padding: 8rem 0;
     }
@@ -14,6 +15,7 @@
         text-align: center;
         margin-bottom: 8rem;
 
+         // Decrease margin
         @include respond(tab-port) {
             margin-bottom: 6rem;
         }
@@ -31,6 +33,7 @@
         padding-top: 2rem;
         display: inline-block;
 
+        // Change settings
         @include respond(tab-port) {
             width: 100%;
             text-align: center;
@@ -74,6 +77,7 @@
         width: 80%;
         float: right;
 
+        // Change settings
         @include respond(tab-port) {
             width: 100%;
             text-align: center;
