--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,12 +1,12 @@
 // layout/header
 .header {
-    height: 95vh;
+    height: 95vh; /* 95% of the height of the viewport*/
     background-image: linear-gradient(
         to right bottom,
         rgba($color-primary-light, 0.8),
         rgba($color-primary-dark, 0.8)
         ),
-        url(../img/hero.jpg);
+        url(../img/hero-small.jpg);
     background-size: cover;
     background-position: top;
     position: relative;
@@ -14,6 +14,17 @@
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); 
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 
+    //Responsive image
+    @media only screen and (min-resolution: 192dpi) and (min-width: 37.5em), (min-width: 125em) { // 192 dot per inch. This is the resolution of the Apple Retina screen.
+        background-image: linear-gradient(
+        to right bottom,
+        rgba($color-primary-light, 0.8),
+        rgba($color-primary-dark, 0.8)
+        ),
+        url(../img/hero.jpg);
+    }
+
+    // Change clip-path so it looks better.
     @include respond(phone) {
         -webkit-clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%); 
         clip-path: polygon(0 0, 100% 0, 100% 85vh, 0 100%);
